<resources>
    <string name="app_name">ReadTracker</string>
    <string name="activity_label_add_new_book">Add new book</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_book_settings">Book settings</string>
    <string name="activity_label_quote_settings">Quote from book</string>
    <string name="activity_label_session_edit">Edit reading session</string>
    <string name="progress_picker_percent">%1$.1f%%</string>
    <string name="introduction_text"><![CDATA[
  ReadTracker is a tool for keeping track of what and how you read your books.<br/><br/>
  Add the book you&rsquo;re currently reading to ReadTracker and start the timer every time you sit down to read.<br/><br/>
  After a while ReadTracker will be able to give you some insight into how you read and give a prediction on how long you have left.<br/><br/>
  When you&rsquo;ve completed the book you&rsquo;ll get a summary of your reading. And you can write a short note about what you thought of it that you can share with your friends, or just keep for your future self.<br/><br/>
  More info <a href="http://www.readtracker.com">www.readtracker.com</a>]]>
    </string>
    <string name="book_search_hint">Free text search or \"isbn 978–0–7645–8874–7\"</string>
    <string name="book_search_searching">Searching…</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_add">Add</string>
    <string name="home_menu_add_book">Add new book</string>
    <string name="home_loading_books">Loading books…</string>
    <string name="home_fragment_title_finished">Finished</string>
    <string name="home_fragment_title_reading">Reading</string>
    <string name="welcome_start_using">Start using ReadTracker</string>
    <string name="welcome_welcome_to_readtracker">Welcome to ReadTracker!</string>
    <string name="book_fragment_header_summary">Progress</string>
    <string name="book_fragment_header_read">Read</string>
    <string name="book_fragment_header_quotes">Quotes</string>
    <string name="summary_fragment_summary">You\'ve read a total of %1$s over %2$s.</string>
    <string name="summary_finish_today">Why not finish it today?</string>
    <string name="summary_eta_for_three_days">That\'s about %1$s per day to finish it in three days.</string>
    <string name="summary_eta_for_one_week">That\'s about %1$s per day to finish it in a week.</string>
    <string name="summary_eta_for_two_weeks">That\'s about %1$s per day to finish it in two weeks.</string>
    <string name="summary_finish_book">Finish book now</string>
    <string name="quote_fragment_add_new_quote">Add quote from book</string>
    <string name="quote_fragment_no_quotes">No quotes</string>
    <string name="quote_activity_position">Position in book where the text start</string>
    <string name="quote_activity_save">Save quote</string>
    <string name="quote_activity_title">Quoting</string>
    <string name="quote_text">Text</string>
    <string name="quote_error_failed_to_delete">Failed to delete the quote</string>
    <string name="add_book_save">Save</string>
    <string name="add_book_title_hint">Title</string>
    <string name="add_book_author_hint">Author</string>
    <string name="add_book_please_fill_out_required_fields">Please fill all fields</string>
    <string name="add_book_page_count_hint">100</string>
    <string name="add_book_track_using_pages">Track progress using page count</string>
    <string name="add_book_delete">Delete book</string>
    <string name="add_book_confirm_delete">Really delete %1$s?</string>
    <string name="add_book_delete_explanation">This will delete the book and the entire reading history from the device.\n\nThere is no way to undo this operation.</string>
    <string name="add_book_delete_failed">Failed to delete book</string>
    <string name="add_book_find_info_on_google_books">Autofill using Google Books</string>
    <string name="add_book_looking_for_book">Searching for book info…</string>
    <string name="add_book_no_cover_found">Couldn\'t find a cover on Google Books</string>
    <string name="add_book_long_press_to_delete">Long press to clear</string>
    <string name="add_book_book_cover">Book cover image.</string>
    <string name="add_book_refresh_book_cover">Press to attempt to refresh the book cover image from Google Images.</string>
    <string name="book_activity_edit_book_settings">Edit book settings</string>
    <string name="book_error_updating">An error occurred, the book could not be saved.</string>
    <string name="reading_start">Start</string>
    <string name="personalize">Personalize</string>
    <string name="refresh_cover">Refresh cover</string>
    <string name="reading_resume">Resume</string>
    <string name="reading_pause">Pause</string>
    <string name="reading_done">Done</string>
    <string name="reading_last_at">Last at %1$s</string>
    <string name="reading_last_on_page">Last on page %1$s</string>
    <string name="reading_click_to_start">Touch here to start</string>
    <string name="reading_item_cover_content_desc">Book cover</string>
    <string name="reading_list_blank_content_desc">Blank reading list</string>
    <string name="reading_list_add_first_book">Add your first book</string>
    <string name="reading_list_blank_text_currently_reading">Books you are currently reading will show up here</string>
    <string name="reading_list_blank_text_finished_books">Books you are have finished will show up here.</string>
    <string name="reading_list_blank_import_data">Import ReadTracker backup</string>
    <string name="date_earlier_today">earlier today</string>
    <string name="date_yesterday">yesterday</string>
    <string name="date_two_days_ago">two days ago</string>
    <string name="date_three_days_ago">three days ago</string>
    <string name="date_about_a_week_ago">about a week ago</string>
    <string name="date_about_two_weeks_ago">about two weeks ago</string>
    <string name="date_about_three_weeks_ago">about three weeks ago</string>
    <string name="date_about_a_month_ago">about a month ago</string>
    <string name="time_hours_and_minutes">%1$s, %2$s</string>
    <string name="general_save">Save</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete">Delete</string>
    <string name="general_finished">Finished</string>
    <string name="general_hours">hours</string>
    <string name="general_minutes">minutes</string>
    <string name="general_seconds">seconds</string>
    <string name="general_on_date">on %1$s</string>
    <string name="general_two_item_sentence">%1$s and %2$s</string>
    <string name="general_three_item_sentence">%1$s, %2$s and %3$s</string>
    <string name="general_unknown_title">Unknown title</string>
    <string name="general_not_available_short">N/A</string>
    <string name="book_search_search">Search</string>
    <string name="book_search_search_google_books">Search Google Books…</string>
    <string name="book_search_new_book">… or add manually</string>
    <string name="book_search_no_results">No results</string>
    <string name="finish_book_hint">What did you think of the book?</string>
    <string name="finish_book_finished_reading">Finished reading</string>
    <string name="finish_book_finish">Save and finish</string>
    <string name="book_list_finished_on">Finished %1$s</string>
    <string name="sessions_blank_text">More information will show up here once you start reading</string>
    <string name="sessions_summary">Reading for %1$s over %2$d sessions.</string>
    <string name="sessions_eta">Given your current reading pace, it\'ll take roughly %1$s to finish the book.</string>
    <string name="end_session_where_did_you_stop_reading">Where did you stop reading?</string>
    <string name="end_session_scroll_to_end_to_finish">Scroll to the very end if you finished the book</string>
    <string name="end_session_finish_book">Finish book</string>
    <string name="add_quote_delete_quote">Delete Quote</string>
    <string name="add_quote_delete_explanation">This will delete the quote.\n\nThere is no way to undo this operation.</string>
    <string name="settings_compact_finish_list">Compact finish list</string>
    <string name="settings_compact_finish_list_summary">Hides the closing remarks for finished books.</string>
    <string name="settings_full_dates">Always show full dates</string>
    <string name="settings_full_dates_summary">Always show the full date in the app instead of "human" dates such as "yesterday".</string>
    <string name="settings_import_json">Import</string>
    <string name="settings_import_failed">Importing file failed. Please make sure it\'s a valid ReadTracker export file.</string>
    <string name="settings_import_summary">Imports a previously exported ReadTracker file.</string>
    <string name="settings_import_confirmation">Importing data from a ReadTracker JSON file will add books, quotes, and sessions into your current device.\n\nBooks that already exist on the device will merge with imported ones, and new books will be added.\n\nThere\'s no way to undo this operation.</string>
    <string name="settings_import_positive_button">Select file</string>
    <string name="settings_export_json">Export</string>
    <string name="settings_export_summary">Exports all ReadTracker data to a file.</string>
    <string name="settings_export_confirmation">This will export all your data to a JSON file.\n\nThe file is saved in your Downloads folder, where it can be shared, viewed, or imported back into ReadTracker.</string>
    <string name="settings_export_positive_button">Export</string>
    <string name="settings_export_failed">Unfortunately there was an unexpected error when exporting your data. Make sure your external media is available and try again.</string>
    <string name="settings_export_share_file">The export completed successfully and the file is now in your Downloads folder.\n\nDo you want to share the file directly to an app or person?\n\nThe file will remain in your Downloads folder.</string>
    <string name="settings_export_need_external_media">Please make sure that your external media is mounted before exporting your ReadTracker data.</string>
    <string name="settings_export_success">Successfully exported ReadTracker data</string>
    <string name="settings_share_export">Share exported file</string>
    <string name="settings_title_settings">Settings</string>
    <string name="settings_title_data">Data</string>
    <string name="settings_title_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_legal">Legal</string>
    <string name="settings_import_running">Importing…</string>
    <string name="settings_import_book_report">%1$s imported (%2$s, %3$s), together with %4$s and %5$s.</string>
  <string name="string_dialog_color_picker_ok">Apply</string>
    <string name="StringUtils_format_pages_length_pct_html"><![CDATA[<b>%.1f%%</b>]]></string>
    <string name="StringUtils_format_pages_length_pages_html"><![CDATA[<b>%1$d</b> pages]]></string>
    <string name="StringUtils_format_duration_short_html"><![CDATA[<b>%1$d</b>h, <b>%2$d</b>min]]></string>
    <string name="StringUtils_format_duration_long"><![CDATA[<b>%1$d</b> minutes]]></string>
    <string name="StringUtils_format_session_from_to_pct">%.1f - %.1f%%</string>
    <string name="StringUtils_format_session_from_to_pages">p. %1$d - %2$d</string>
    <string name="ReadingSessionAdapter_date_format">ha, MMM d, yyyy</string>
    <string name="session_edit_started_on_page">Started on page</string>
    <string name="session_edit_started_at">Started at</string>
    <string name="session_edit_ended_on_page">Ended on page</string>
    <string name="session_edit_ended_at">Ended at</string>
    <string name="session_edit_day_of_reading">Day of reading</string>
    <string name="session_edit_reading_time">Reading time</string>
</resources>