<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/settings_title_settings">
    <CheckBoxPreference
      android:title="@string/settings_compact_finish_list"
      android:summary="@string/settings_compact_finish_list_summary"
      android:key="settings.compact_finish_list"/>

    <CheckBoxPreference
      android:title="@string/settings_full_dates"
      android:summary="@string/settings_full_dates_summary"
      android:key="settings.full_dates"/>

  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_title_data">
    <Preference
      android:title="@string/settings_import_json"
      android:summary="@string/settings_import_summary"
      android:key="data.import_json"/>

    <Preference
      android:title="@string/settings_export_json"
      android:summary="@string/settings_export_summary"
      android:key="data.export_json"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_title_about">
    <Preference
      android:title="@string/settings_version"
      android:key="about.version"/>

    <Preference
      android:title="@string/settings_legal"
      android:key="about.legal"/>
  </PreferenceCategory>
</PreferenceScreen>
