<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

  <RelativeLayout
    android:id="@+id/time_spinner_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/time_spinner_controls_flipper">

    <TextView
      android:id="@+id/last_position_text"
      style="@style/default_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:gravity="center"
      android:textSize="20sp"/>

    <NumberPicker
      android:id="@+id/duration_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginBottom="24dp"
      android:minHeight="80dp"
      android:minWidth="220dp"
      />

    <com.readtracker.android.custom_views.TimeSpinner
      android:id="@+id/timespinner"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_centerInParent="true"
      android:layout_marginBottom="48dp"/>

  </RelativeLayout>

  <com.readtracker.android.thirdparty.SafeViewFlipper
    android:id="@+id/time_spinner_controls_flipper"
    style="@style/flipper_action_buttons"
    android:layout_alignParentBottom="true">

    <!-- start button -->

    <Button
      android:id="@+id/start_button"
      style="@style/default_button"
      android:layout_gravity="center"
      android:text="@string/reading_start"/>

    <!-- group of pause/resume and done button -->

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true">

      <Button
        android:id="@+id/pause_button"
        style="@style/default_button"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_weight="1"
        android:text="@string/reading_pause"
        />

      <Button
        android:id="@+id/done_button"
        style="@style/default_button"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_weight="1"
        android:text="@string/reading_done"
        />

    </LinearLayout>

  </com.readtracker.android.thirdparty.SafeViewFlipper>

</RelativeLayout>
